--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "test": "node src/js/joker.js"
+    "test": "node src/js/joker.js",
+    "format": "prettier -w src/js/joker.js"
   },
   "repository": {
     "type": "git",
@@ -17,9 +18,6 @@
     "url": "https://github.com/EmmaCaroline/joker/issues"
   },
   "homepage": "https://github.com/EmmaCaroline/joker#readme",
-  "dependencies": {
-    "one-liner-joke": "^1.2.2"
-  },
   "devDependencies": {
     "prettier": "^3.3.3"
   }
